# cloudviz

./: .commitlintrc.json  .env.example  .gitignore  COMPREHENSIVE-VALIDATION-REPORT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  Docker-Testing-Report.md  Dockerfile  FINAL-VALIDATION-SUMMARY.md  LICENSE  README.md  REPOSITORY-CLEANUP-SUMMARY.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  STRUCTURE.md  bandit_report.json  bandit_report_fixed.json  create_hierarchical_readme.py  create_readme.py  demo-api-usage.ps1  demo-simple.ps1  docker-compose.yml  final_security_report.json  fix_mermaid_syntax.py  nginx.conf  pyproject.toml  quick-demo.ps1  requirements.txt  update_readme.py
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/wiki/: API-Reference.md  Configuration.md  Installation-Guide.md  n8n-Integration.md
.github/workflows/: cd.yml  ci.yml  code-quality.yml  performance.yml  security.yml  wiki-deploy.yml
cloudviz/: __init__.py
cloudviz/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py
cloudviz/api/routes/: __init__.py  admin.py  auth.py  aws.py  extraction.py  gcp.py  health.py  visualization.py
cloudviz/core/: __init__.py  base.py  config.py  models.py
cloudviz/core/utils/: __init__.py  cache.py  helpers.py  logging.py  security.py
cloudviz/frontend/: index.html
cloudviz/frontend/static/css/: app.css
cloudviz/frontend/static/js/: app.js
cloudviz/providers/: __init__.py
cloudviz/providers/aws/: __init__.py  extractor.py  factory.py  models.py
cloudviz/providers/azure/: extractor.py  factory.py  models.py
cloudviz/providers/azure/powershell/: CloudVizLegacy.psd1  CloudVizLegacy.psm1
cloudviz/providers/gcp/: __init__.py  extractor.py  factory.py  models.py
cloudviz/visualization/: __init__.py  exporters.py  layouts.py  themes.py
cloudviz/visualization/engines/: __init__.py  graphviz.py  image.py  mermaid.py
config/: dev.yml  ppt.yml  prod.yml
docs/: DEVELOPMENT_STATUS.md  END-TO-END-GUIDE.md  GITHUB-COPILOT-SETUP.md  Installation-Guide-Tested.md  PRODUCTION-DEPLOYMENT.md  README.md  SECURITY_AND_TESTING.md  WIKI-DEPLOYMENT-GUIDE.md  architecture.md  contributing.md  development.md  installation.md  quick-start.md
docs/api/: README.md
docs/deployment/: production.md
docs/guides/: multi-cloud-setup.md
docs/operations/: troubleshooting.md
docs/reference/: faq.md
docs/security/: README.md
docs/wiki/: API-Reference.md  Home.md  Quick-Start.md  README.md  Troubleshooting.md
examples/configurations/: .env.example  README.md  docker-compose.example.yml  k8s-deployment.example.yaml
examples/configurations/.github/workflows/: cloudviz-ci.yml
examples/n8n-workflows/: README.md  daily-infrastructure-discovery.json  incident-response-diagram.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/auth/: LoginComponent.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/diagram/: DiagramRenderer.tsx
frontend/src/components/filters/: ResourceFiltersComponent.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: api.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
requirements/: base.txt  dev.txt  prod.txt
scripts/: README.md  check_performance_regression.py  deploy.py  deploy_wiki.py  health_check.py  install-linux.sh  install-windows.ps1  migrate.py  quick-start-clean.ps1  quick-start-fixed.ps1  quick-start-simple.ps1  quick-start.ps1  verify-installation.ps1  verify-installation.py  verify-installation.sh  wiki_setup_helper.py
tests/: README.md  __init__.py  conftest.py  test_requirements.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/load/: api-load-test.js
tests/unit/: __init__.py  test_basic.py  test_core.py  test_requirements.py
tests/unit/core/: test_config.py
wiki/: API-Documentation.md  Architecture.md  Cloud-Providers.md  Configuration.md  Deployment.md  Development.md  Examples.md  Getting-Started.md  Home.md  Installation-Guide-New.md  Installation-Guide.md  Quick-Start.md  README.md  System-Architecture-New.md  System-Architecture.md  Troubleshooting.md  Visualization.md  _Navigation.md  n8n-Integration-New.md  n8n-Integration.md
